<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.lewisu.cs.sangeetha.ratingsapp.SecondActivity">

    <TextView
        android:id="@+id/tv_quality_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="sans-serif"
        android:text="@string/food_quality_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <LinearLayout
        android:id="@+id/layout_agree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/blank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"

            android:orientation="horizontal"

            />

        <TextView
            android:id="@+id/agree_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="horizontal"
            android:text="@string/agree"

            />

        <TextView
            android:id="@+id/neutral_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="horizontal"
            android:text="@string/neutral" />

        <TextView
            android:id="@+id/disagree_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="horizontal"
            android:text="@string/disagree" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_foodquality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/tv_fresh"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/f_fresh"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="14sp" />

        <RadioGroup
            android:id="@+id/radiogroup_fresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_fresh_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:lineSpacingExtra="14sp"

                tools:text="@string/agree" />

            <RadioButton
                android:id="@+id/radio_fresh_neutral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:lineSpacingExtra="14sp" />

            <RadioButton
                android:id="@+id/radio_fresh_disagree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:lineSpacingExtra="14sp" />
        </RadioGroup>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_diverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/tv_diverse"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/f_diverse"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="14sp" />

        <RadioGroup
            android:id="@+id/radiogroup_diverse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/radio_diverse_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:lineSpacingExtra="14sp"

                tools:text="@string/agree" />

            <RadioButton
                android:id="@+id/radio_diverse_neutral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:lineSpacingExtra="14sp" />

            <RadioButton
                android:id="@+id/radio_diverse_disagree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:lineSpacingExtra="14sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_cooklevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/tv_cooklevel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"

            android:text="@string/f_cooklevel"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="14sp" />

        <RadioGroup
            android:id="@+id/radiogroup_cooklevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/radio_cook_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:lineSpacingExtra="14sp"

                tools:text="@string/agree" />

            <RadioButton
                android:id="@+id/radio_cook_neutral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:lineSpacingExtra="14sp" />

            <RadioButton
                android:id="@+id/radio_cook_disagree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:lineSpacingExtra="14sp" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:textAlignment="center" />


</LinearLayout>
